@@ -1,13 +1,17 @@
+2010-11-11	The InnoDB Team
+	* thr/thr0loc.c, trx/trx0i_s.c:
+	Fix Bug#57802 Empty ASSERTION parameter passed to the HASH_SEARCH macro
+
 2010-11-10	The InnoDB Team
 
 	* dict/dict0dict.c, handler/handler0alter.cc, include/dict0dict.h
 	row/row0merge.c:
-	Fix Bug #55084 Innodb crash and corruption after alter table
+	Fix Bug#55084 InnoDB crash and corruption after ALTER TABLE
 
 2010-11-10	The InnoDB Team
 
 	* srv/srv0start.c:
-	Fix Bug #48026 Log start and end of InnoDB buffer pool
+	Fix Bug#48026 Log start and end of InnoDB buffer pool
 	initialization to the error log
 
 2010-11-03	The InnoDB Team
